feat: small changes