@@ -11,6 +11,7 @@ import org.example.object.Artist;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Locale;
 
 public class MusicService {
 
@@ -25,26 +26,25 @@ public class MusicService {
             MongoCollection<Document> collection = database.getCollection("artists");
 
             for (int x = 0; x < 3;) { // loops 3 times
-
-                var aggregation = Arrays.asList(Aggregates.sample(1)); // One random artist
+                Document sampleStage = new Document("$sample", new Document("size", 1));
+                var aggregation = List.of(sampleStage); // One random artist
                 var cursor = collection.aggregate(aggregation).iterator();
 
                 try {
                     while (cursor.hasNext() && x < 3) { // Check x < 3 here
-
                         Document artistDocument = cursor.next();
-                        Artist currentArtist = documentToArtist(artistDocument); // Convert BSON to java object
+                        Artist currentArtist = documentToArtist(artistDocument); // Convert Document to java object
 
-                        currentArtist.setWinningCondition(Math.abs(value - getArtistValue(currentArtist, category))); // Sets winning condition to artist object
+                        // Check if artist has non-null and non-zero values
+                        if (isValidArtist(currentArtist, category)) {
+                            currentArtist.setChosen(Math.abs(value - getArtistValue(currentArtist, category))); // Sets winning condition to artist object
 
-//                        boolean isUnique = artists.stream().noneMatch(p -> p.getWinningCondition() == currentArtist.getWinningCondition()); // Check if artists have the same winning condition
-
-//                        if (isUnique) {
-//                            artists.add(currentArtist);
-//                            x++;
-//                        }
-                        artists.add(currentArtist);
-                        x++;
+                            // Check if artists list already contains the chosen artist
+                            if (artists.stream().noneMatch(p -> p.getChosen() == currentArtist.getChosen())) {
+                                artists.add(currentArtist);
+                                x++;
+                            }
+                        }
                     }
                 } catch (Exception e) {
                     e.printStackTrace(); // Handle or log the exception
@@ -59,17 +59,6 @@ public class MusicService {
         return artists;
     }
 
-
-//    @Override
-//    public Artist documentToArtist(Document document) {
-//        return null;
-//    }
-//
-//    @Override
-//    public int getArtistValue(Artist currentArtist, String category) {
-//        return 0;
-//    }
-
     public Artist documentToArtist(Document document) {
         Artist artist = new Artist();
         artist.setName(document.getString("name"));
@@ -82,6 +71,32 @@ public class MusicService {
         artist.setBrits(document.getInteger("brits"));
         return artist;
     }
+
+    private boolean isValidArtist(Artist artist, String category) {
+        if (artist == null) {
+            return false;
+        }
+
+        switch (category.toLowerCase(Locale.ROOT)) {
+            case "grammys":
+                return artist.getGrammys() != 0;
+            case "mtv":
+                return artist.getMtv() != 0;
+            case "billboard":
+                return artist.getBillboard() != 0;
+            case "amas":
+                return artist.getAmas() != 0;
+            case "vmas":
+                return artist.getVmas() != 0;
+            case "emas":
+                return artist.getEmas() != 0;
+            case "brits":
+                return artist.getBrits() != 0;
+            default:
+                return false;
+        }
+    }
+
 
     public int getArtistValue(Artist currentArtist, String category) {
         if ("Grammys".equals(category)) {
